--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -1,147 +1,9 @@
 <html dir="rtl">
 <head>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
-
-<style>
-.blogShort{ border-bottom:1px solid white;}
-.add{background: #333; padding: 10%; height: 300px;}
-
-.nav-sidebar { 
-    width: 100%;
-    padding: 8px 0; 
-    border-right: 1px solid white;
-}
-.nav-sidebar a {
-    color: #333;
-    -webkit-transition: all 0.08s linear;
-    -moz-transition: all 0.08s linear;
-    -o-transition: all 0.08s linear;
-    transition: all 0.08s linear;
-}
-.nav-sidebar .active a { 
-    cursor: default;
-    background-color: white; 
-    color: #0072ff; 
-}
-.nav-sidebar .active a:hover {
-    background-color: #37D980;   
-}
-.nav-sidebar .text-overflow a,
-.nav-sidebar .text-overflow .media-body {
-    white-space: nowrap;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis; 
-}
-
-.btn-blog {
-    color: #ffffff;
-    background-color: #37d980;
-    border-color: #37d980;
-    border-radius:0;
-    margin-bottom:10px
-}
-.btn-blog:hover,
-.btn-blog:focus,
-.btn-blog:active,
-.btn-blog.active,
-.open .dropdown-toggle.btn-blog {
-    color: white;
-    background-color:#34ca78;
-    border-color: #34ca78;
-}h1{
-     color:#34ca78;
-    font-family: 'Lobster', cursive;
-}
-
-body{
-    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
-}
-.contact-form{
-    background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
-    width: 70%;
-}
-.contact-form .form-control{
-    border-radius:1rem;
-}
-div.c {
-  text-align: right;
-} 
-.contact-image{
-    text-align: right;
-}
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
-    transform: rotate(29deg);
-}
-.contact-form form{
-    padding: 14%;
-}
-.contact-form form .row{
-    margin-bottom: -7%;
-}
-.contact-form h3{
-    margin-bottom: 8%;
-    margin-top: -10%;
-    text-align: center;
-    color: #0062cc;
-}
- .contact-form h1{
-    margin-bottom: 15%;
-    margin-top: -30%;
-    text-align: center;
-    color: white;
-}
-.contact-form .btnContact {
-    width: 50%;
-    border: none;
-    border-radius: 1rem;
-    padding: 1.5%;
-    background: #dc3545;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-}
-.btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
-}
-</style>
-
-    <div class="col-sm-2 paddingTop20">
-            <nav class="nav-sidebar">
-                <ul class="nav">
-                    <li class="active"> <a href="http://127.0.0.1:8000/home/"> <span class="glyphicon glyphicon-star"></span> דף הבית</a></li>
-                    <li class="nav-divider"></li>
-                </ul>
-            </nav>
-    </div>
-
-<div class="container contact-form">
-            <div class="contact-image">
-
-            </div>
-            <form method="post">
-                <h1>פרסם דיווח</h1>
+<h1>פרסם דיווח</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-<div class="c">
 	<td>תאריך:</td>
     <td><input type="datetime-local" name="pub_date" required /></td>
 </tr><tr>
@@ -163,7 +25,7 @@ div.c {
 <br />
 <br />
 <td>סוג החיה:</td>
-<select name="animal_type">
+    <select name="animal_type">
     <option value="כלב">כלב</option>
     <option value="חתול">חתול</option>
     <option value="תוכי">תוכי</option>
@@ -174,7 +36,7 @@ div.c {
 <br />
 <br />
 <td>סטטוס:</td>
-<select name="animal_status">
+    <select name="animal_status">
     <option value="אבד">אבד</option>
     <option value="נמצא">נמצא</option>
   </select>
@@ -196,15 +58,9 @@ div.c {
 <br />
 <br />
 {{form.captcha}}
-<br />
-
-<br />
-
     <div class="form-actions">
-      <button id="send" type="submit">פרסם</button>
+      <button id="send" type="submit">submit!</button>
     </div>
-    </div>
-
 </form>
 </body>
 </html>
