--- a/post/templates/post1.html
+++ b/post/templates/post1.html
@@ -7,9 +7,22 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
+
 <style>
-body{
-    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
+.blogShort{ border-bottom:1px solid white;}
+.add{background: #333; padding: 10%; height: 300px;}
+
+.nav-sidebar { 
+    width: 100%;
+    padding: 8px 0; 
+    border-right: 1px solid white;
+}
+.nav-sidebar a {
+    color: #333;
+    -webkit-transition: all 0.08s linear;
+    -moz-transition: all 0.08s linear;
+    -o-transition: all 0.08s linear;
+    transition: all 0.08s linear;
 }
 .nav-sidebar .active a { 
     cursor: default;
@@ -18,6 +31,37 @@ body{
 }
 .nav-sidebar .active a:hover {
     background-color: #37D980;   
+}
+.nav-sidebar .text-overflow a,
+.nav-sidebar .text-overflow .media-body {
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis; 
+}
+
+.btn-blog {
+    color: #ffffff;
+    background-color: #37d980;
+    border-color: #37d980;
+    border-radius:0;
+    margin-bottom:10px
+}
+.btn-blog:hover,
+.btn-blog:focus,
+.btn-blog:active,
+.btn-blog.active,
+.open .dropdown-toggle.btn-blog {
+    color: white;
+    background-color:#34ca78;
+    border-color: #34ca78;
+}h1{
+     color:#34ca78;
+    font-family: 'Lobster', cursive;
+}
+
+body{
+    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
 }
 .contact-form{
     background: #fff;
@@ -52,6 +96,12 @@ div.c {
     text-align: center;
     color: #0062cc;
 }
+ .contact-form h1{
+    margin-bottom: 15%;
+    margin-top: -30%;
+    text-align: center;
+    color: white;
+}
 .contact-form .btnContact {
     width: 50%;
     border: none;
@@ -73,9 +123,8 @@ div.c {
     cursor: pointer;
 }
 </style>
-<body>
 
-  <div class="col-sm-2 paddingTop20">
+    <div class="col-sm-2 paddingTop20">
             <nav class="nav-sidebar">
                 <ul class="nav">
                     <li class="active"> <a href="http://127.0.0.1:8000/home/"> <span class="glyphicon glyphicon-star"></span> דף הבית</a></li>
@@ -89,46 +138,71 @@ div.c {
 
             </div>
             <form method="post">
-                <h3>צור קשר</h3>
+                <h1>פרסם דיווח</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
 <div class="c">
-</tr><tr>
-<input name="pet" type="hidden" value="{{ pet_id }}" >
-<td>שם פרטי:</td>
-    <td><input type="text" name="firstName" required /></td>
+	<td>תאריך:</td>
+    <td><input type="datetime-local" name="pub_date" required /></td>
 </tr><tr>
 <br />
 <br />
-<td>שם משפחה:</td>
-    <td><input type="text" name="lastName" required /></td>
+<td>שם המדווח:</td>
+    <td><input type="text" name="pub_name" required /></td>
 </tr><tr>
 <br />
 <br />
 <td>טלפון:</td>
-    <td><input type="text" name="phone" required /></td>
+    <td><input type="text" name="pub_phone" required /></td>
 </tr><tr>
 <br />
 <br />
 <td>כתובת דוא"ל:</td>
-    <td><input type="text" name="email" required /></td>
+    <td><input type="text" name="pub_email" required /></td>
 </tr><tr>
 <br />
 <br />
-<td>פרטים:</td>
-    <td><input type="text" name="freetext" required /></td>
+<td>סוג החיה:</td>
+<select name="animal_type">
+    <option value="כלב">כלב</option>
+    <option value="חתול">חתול</option>
+    <option value="תוכי">תוכי</option>
+    <option value="ארנב">ארנב</option>
+	<option value="אחר">אחר</option>
+  </select>
 </tr><tr>
+<br />
+<br />
+<td>סטטוס:</td>
+<select name="animal_status">
+    <option value="אבד">אבד</option>
+    <option value="נמצא">נמצא</option>
+  </select>
+</tr><tr>
+<br />
+<br />
+<td>מיקום:</td>
+    <td><input type="text" name="animal_location" required /></td>
+</tr><tr>
+<br />
+<br />
+<td>פרטים נוספים:</td>
+    <td><input type="text" name="animal_freetext" required /></td>
+</tr><tr>
+<br />
+<br />
+<td>תמונה:</td>
+<input type="file" name="animal_image" accept="image/*" >
 <br />
 <br />
 {{form.captcha}}
 <br />
-
 <br />
 
     <div class="form-actions">
-      <button id="send" type="submit">שלח</button>
+      <button id="send" type="submit">פרסם</button>
     </div>
-    </div>
+
 
 </form>
 </body>
