--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -21,28 +21,38 @@
                 {% comment %} <img src="{% static 'post/logo.png' %}"  width="60" height="60">          {% endcomment %}
                 <h1 class="text-center">PetLost</h1>
             </div>
-            {% block tm-nav %}
             <nav class="tm-nav" id="tm-nav">            
                 <ul>
-                    <li class="tm-nav-item active"><a href="../home" class="tm-nav-link">
+                    {% if "/home/" == request.path %}
+                    <li class="tm-nav-item active"><a href="/home/" class="tm-nav-link">
+                    {% else %}
+                    <li class="tm-nav-item"><a href="/home/" class="tm-nav-link">
+                    {% endif %}
                         <i class="fas fa-home"></i>
                         דף הבית
                     </a></li>
+                    {% if "post" in request.path %}
+                    <li class="tm-nav-item active"><a href="post" class="tm-nav-link">
+                    {% else %}
                     <li class="tm-nav-item"><a href="post" class="tm-nav-link">
+                    {% endif %}
                         <i class="fas fa-pen"></i>
                         פרסם אבידה
                     </a></li>
-                    <li class="tm-nav-item"><a href="about.html" class="tm-nav-link">
+                    <li class="tm-nav-item"><a href="/home/" class="tm-nav-link">
                         <i class="fas fa-users"></i>
                         אבידות שפורסמו
                     </a></li>
-                    <li class="tm-nav-item"><a href="contact.html" class="tm-nav-link">
+                    {% if "aboutUs" in request.path %}
+                    <li class="tm-nav-item active"><a href="aboutUs" class="tm-nav-link">
+                    {% else %}
+                    <li class="tm-nav-item"><a href="aboutUs" class="tm-nav-link">
+                    {% endif %}
                         <i class="far fa-comments"></i>
                         קצת עלינו
                     </a></li>
                 </ul>
             </nav>
-            {% endblock tm-nav %}
             <div class="tm-mb-65">
                 <a rel="nofollow" href="https://fb.com/oshrey16" class="tm-social-link">
                     <i class="fab fa-facebook tm-social-icon"></i>
