--- a/post/templates/com.html
+++ b/post/templates/com.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block title %}<title>LostPet</title>{% endblock title %}
 {% block containerCenter %}
+{% if form.error %}
+{% for field in form %}
+    {% for error in field.errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endfor %}
+{% for error in form.non_field_errors %}
+    <div class="alert alert-danger">
+        <strong>{{ error|escape }}</strong>
+    </div>
+{% endfor %}
+{% endif %}
 <div class="container contact-form">
             <div class="contact-image">
 
